// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getHakukohdeByValues returns correct hakukohde given form values 1`] = `
Object {
  "alkamiskausiKoodiUri": "kausi_1#1",
  "alkamisvuosi": 2020,
  "aloituspaikat": 25,
  "ensikertalaisenAloituspaikat": 29,
  "eriHakulomake": true,
  "hakuajat": Array [
    Object {
      "alkaa": "2019-04-17T05:52",
      "paattyy": "2019-04-22T05:52",
    },
    Object {
      "alkaa": "2019-05-17T05:52",
      "paattyy": "2019-05-18T05:52",
    },
  ],
  "hakulomakeId": "12345",
  "hakulomakeKuvaus": Object {},
  "hakulomakeLinkki": Object {},
  "hakulomaketyyppi": "ataru",
  "kaytetaanHaunAikataulua": false,
  "kielivalinta": Array [
    "fi",
    "sv",
  ],
  "liitteet": Array [
    Object {
      "kuvaus": Object {
        "fi": "Fi kuvaus",
        "sv": "Sv kuvaus",
      },
      "nimi": Object {
        "fi": "Fi nimi",
        "sv": "Sv nimi",
      },
      "toimitusaika": "2019-08-17T05:52",
      "toimitusosoite": Object {
        "osoite": Object {
          "osoite": Object {
            "fi": "Fi osoite",
            "sv": "Sv osoite",
          },
          "postinumero": "00940",
          "postitoimipaikka": Object {
            "fi": "Fi postitoimipaikka",
            "sv": "Sv postitoimipaikka",
          },
        },
        "sahkoposti": Object {
          "fi": "Fi sahkoposti",
          "sv": "Sv sahkoposti",
        },
      },
      "toimitustapa": "muu_osoite",
      "tyyppi": "liitetyyppi_1#1",
    },
  ],
  "liitteetOnkoSamaToimitusaika": false,
  "liitteetOnkoSamaToimitusosoite": false,
  "liitteidenToimitusaika": null,
  "liitteidenToimitusosoite": null,
  "liitteidenToimitustapa": null,
  "nimi": Object {
    "fi": "Fi nimi",
    "sv": "Sv nimi",
  },
  "pohjakoulutusvaatimusKoodiUrit": Array [
    "vaatimus_1#1",
    "vaatimus_2#1",
  ],
  "toinenAsteOnkoKaksoistutkinto": true,
  "valintakokeet": Array [
    Object {
      "tilaisuudet": Array [
        Object {
          "aika": Object {
            "alkaa": "2019-04-16T08:44",
            "paattyy": "2019-04-18T08:44",
          },
          "lisatietoja": Object {
            "fi": "fi lisatietoja",
            "sv": "sv lisatietoja",
          },
          "osoite": Object {
            "osoite": Object {
              "fi": "fi osoite",
              "sv": "sv osoite",
            },
            "postinumero": "00520",
            "postitoimipaikka": Object {
              "fi": "fi posititoimipaikka",
              "sv": "sv posititoimipaikka",
            },
          },
        },
      ],
      "tyyppi": "tyyppi_1#1",
    },
  ],
  "valintaperuste": "peruste_1#1",
}
`;

exports[`getValuesByHakukohde returns correct form values given hakukohde 1`] = `
Object {
  "alkamiskausi": Object {
    "kausi": "kausi_1#1",
    "vuosi": Object {
      "value": "2015",
    },
  },
  "aloituspaikat": Object {
    "aloituspaikkamaara": "25",
    "ensikertalaismaara": "39",
  },
  "hakuajat": Object {
    "eriHakuaika": true,
    "hakuajat": Array [
      Object {
        "alkaa": "2019-03-29T12:28",
        "paattyy": "2019-09-29T12:30",
      },
    ],
  },
  "hakulomake": Object {
    "eriHakulomake": true,
    "kuvaus": Object {},
    "linkki": Object {},
    "lomake": Object {
      "ataru": Object {
        "value": "12345",
      },
    },
    "tyyppi": "ataru",
  },
  "kieliversiot": Object {
    "languages": Array [
      "fi",
      "sv",
    ],
  },
  "liitteet": Object {
    "liitteet": Array [
      Object {
        "kuvaus": Object {
          "fi": "Fi kuvaus",
          "sv": "Sv kuvaus",
        },
        "nimi": Object {
          "fi": "Fi nimi",
          "sv": "Sv nimi",
        },
        "toimitusaika": "2016-10-25T09:45",
        "toimitustapa": Object {
          "paikka": Object {
            "osoite": Object {
              "fi": "Fi osoite",
              "sv": "Sv osoite",
            },
            "postinumero": "00610",
            "postitoimipaikka": Object {
              "fi": "Fi postitoimipaikka",
              "sv": "Sv postitoimipaikka",
            },
            "sahkoposti": Object {
              "fi": "Fi sahkoposti",
              "sv": "Sv sahkoposti",
            },
          },
          "tapa": "muu_osoite",
        },
        "tyyppi": "liitetyyppi_1#1",
      },
    ],
    "toimitusaika": "2011-12-20T10:30",
    "toimitustapa": Object {
      "paikka": Object {
        "osoite": Object {
          "fi": "Fi osoite",
          "sv": "Sv osoite",
        },
        "postinumero": "00940",
        "postitoimipaikka": Object {
          "fi": "Fi postitoimipaikka",
          "sv": "Sv postitoimipaikka",
        },
        "sahkoposti": Object {
          "fi": "Fi sahkoposti",
          "sv": "Sv sahkoposti",
        },
      },
      "tapa": "",
    },
    "yhteinenToimitusaika": false,
    "yhteinenToimituspaikka": false,
  },
  "perustiedot": Object {
    "nimi": Object {
      "fi": "Fi nimi",
      "sv": "Sv nimi",
    },
    "voiSuorittaaKaksoistutkinnon": true,
  },
  "pohjakoulutus": Object {
    "koulutusvaatimukset": Array [
      Object {
        "value": "vaatimus_1#1",
      },
      Object {
        "value": "vaatimus_2#1",
      },
    ],
  },
  "valintakoe": Object {
    "tilaisuudet": Object {
      "tyyppi_1#1": Array [
        Object {
          "alkaa": "2019-04-16T08:44",
          "lisatietoja": Object {
            "fi": "fi lisatietoja",
            "sv": "sv lisatietoja",
          },
          "osoite": Object {
            "fi": "fi osoite",
            "sv": "sv osoite",
          },
          "paattyy": "2019-04-18T08:44",
          "postinumero": "00520",
          "postitoimipaikka": Object {
            "fi": "fi posititoimipaikka",
            "sv": "sv posititoimipaikka",
          },
        },
      ],
    },
    "tyypit": Array [
      Object {
        "value": "tyyppi_1#1",
      },
    ],
  },
  "valintaperusteenKuvaus": Object {
    "valintaperuste": Object {
      "value": "peruste_1#1",
    },
  },
}
`;
